--- a/1.html
+++ b/1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>北海道</title>
+<title><input type="checkbox">北海道</input></title>
 <meta charset="UTF-8">
 </head>
 
