--- a/index.html
+++ b/index.html
@@ -56,23 +56,47 @@
 <li><a href="46.html" title="KAGOSHIMAのお酒を紹介します!">鹿児島県</a></li>
 <li><a href="47.html" title="OKINAWAのお酒を紹介します!">沖縄県</a></li>
 </ol>
+<p>
 
+  
 <h2>日本酒</h2>
-<h4><p>日本酒は、シャーベット状に半ば凍らせた「みぞれ酒」から常温の「冷や」、<br>
-約60℃程度までの「熱燗」と、幅広い温度帯で飲まれる。同種のアルコール飲料を同じ地域で、<br>
-異なる温度により味わうのが常態である例は、他に中国の紹興酒などがある程度であり、
-比較的珍しい。<br>（熱燗について「燗酒」も参照）<br>
+<h4><p>日本特有の製法で造られたお酒。<br>
+  主原料は、米・米麹・水です。<br>
+  日本酒の起源は縄文時代～弥生時代ともいわれており、非常に歴史のあるお酒です。<br>
+  原料を発酵させて造る「醸造酒」の一種になります。<br><br><br>
 
-悪酔いを防ぎ、心身の健康を保つため、食事や「和（やわ）らぎ水」と呼ばれる水[19]と一緒に飲むことを、<br>
-日本酒関連団体などが推奨している。<br>
-いずれの温度帯でも日本酒をそのまま飲むことが多いが、<br>
-熱燗では、火を通した魚を浸して味を付ける骨酒、ひれ酒の伝統もある。<br>
-さらに現代では、杯に氷を入れるオン・ザ・ロック、水割りやお湯割りと飲み方も多様化した。<br>
-ハイボール[20]やカクテルの素材にもなる。<br>
+吟醸酒<BR>
+米・米麹・水・醸造アルコールが原料で、精米歩合は60％以下。<BR>
+よく磨いたお米を長期低温発酵させる「吟醸造り」を施すなどの要件を満たした日本酒です。<BR>
+「吟醸香」と呼ばれる、フルーティで華やかな香りが特徴的です。<BR>
 
-日本酒は、魚介類の臭み消しのほか、煮物などを含めた味・香り付けなどの調味料として、<br>
-調理に使用される。調理専用の料理酒も製造・販売される。<br>
-日本酒の製造過程で生じる酒粕（さけかす）は酒粕焼酎の原料になる他、甘酒などにして飲用したり、<br>
-粕漬けや粕汁などの料理に用いたりされる。</p>
+
+
+
+
+  <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://japanese-ricewine.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+
+</P>
+
+
 </body>
 </html>
