--- a/2.html
+++ b/2.html
@@ -58,6 +58,9 @@
 </ol>
 
 <h2>青森県の日本酒</h2>
+<p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8cAxqW2AFrM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
 <h4><p>二兎(ニト)<br></h4>
 もし初めての日本酒がこの酒だったとしたら、残念ながら他のお酒を飲んでみるとは思わなかったも知れない。<br>
 味、香り、のどごし全てが自分にとって完璧だ。<br>
